--- a/bouncing-ball/style.css
+++ b/bouncing-ball/style.css
@@ -20,6 +20,8 @@ body{
     position: absolute;
     border-radius: 50%;
     background-color: #fff;
+    box-shadow: inset -0.6em -0.6em 1em #5d6066, 
+            inset 0.4em 0.4em 0.5em #eff3ff;
     left: -30%;
     top: 0;
     animation: animate 3s linear infinite, squish 3s linear infinite;
@@ -28,13 +30,13 @@ body{
 .ball:nth-child(2) {
     animation-delay: 0.04s;
     background-color: #fff;
-    opacity: 0.6;
+    opacity: 0.2;
 }
 
 .ball:nth-child(3) {
     animation-delay: 0.08s;
     background-color: #fff;
-    opacity: 0.4;
+    opacity: 0.1;
 }
 
 @keyframes animate {
